src/snapshots/parse_tests__chained_header.snap
---
source: src/parse_tests.rs
expression: headers
---
[
    Header {
        depth: 1,
        text: "a",
    },
    Header {
        depth: 2,
        text: "b",
    },
    Header {
        depth: 3,
        text: "c",
    },
]
