src/snapshots/parse_tests__deeply_nested_task.snap
---
source: src/parse_tests.rs
expression: tasks
---
[
    Task {
        checked: false,
        path: [],
        name: [
            Text(
                Borrowed(
                    "a ",
                ),
            ),
        ],
        description: [],
        nested: [
            Task {
                checked: false,
                path: [],
                name: [
                    Text(
                        Borrowed(
                            "b",
                        ),
                    ),
                ],
                description: [],
                nested: [
                    Task {
                        checked: false,
                        path: [],
                        name: [
                            Text(
                                Borrowed(
                                    "c ",
                                ),
                            ),
                        ],
                        description: [],
                        nested: [],
                    },
                ],
            },
            Task {
                checked: false,
                path: [],
                name: [
                    Text(
                        Borrowed(
                            "d",
                        ),
                    ),
                ],
                description: [],
                nested: [],
            },
        ],
    },
]
