src/snapshots/parse_tests__nested_task.snap
---
source: src/parse_tests.rs
expression: tasks
---
[
    Task {
        checked: false,
        path: [],
        name: [
            Text(
                Borrowed(
                    "title of parent",
                ),
            ),
        ],
        description: [],
        nested: [
            Task {
                checked: false,
                path: [],
                name: [
                    Text(
                        Borrowed(
                            "title of child",
                        ),
                    ),
                ],
                description: [],
                nested: [],
            },
        ],
    },
]
