src/snapshots/parse_tests__nested_tasks_debugout.snap
---
source: src/parse_tests.rs
expression: v
---
[
    Start(
        List(
            None,
        ),
    ),
    Start(
        Item,
    ),
    TaskListMarker(
        false,
    ),
    Text(
        Borrowed(
            "a ",
        ),
    ),
    Start(
        List(
            None,
        ),
    ),
    Start(
        Item,
    ),
    TaskListMarker(
        false,
    ),
    Text(
        Borrowed(
            "b",
        ),
    ),
    Start(
        List(
            None,
        ),
    ),
    Start(
        Item,
    ),
    TaskListMarker(
        false,
    ),
    Text(
        Borrowed(
            "c ",
        ),
    ),
    End(
        Item,
    ),
    End(
        List(
            None,
        ),
    ),
    End(
        Item,
    ),
    Start(
        Item,
    ),
    TaskListMarker(
        false,
    ),
    Text(
        Borrowed(
            "d",
        ),
    ),
    End(
        Item,
    ),
    End(
        List(
            None,
        ),
    ),
    End(
        Item,
    ),
    End(
        List(
            None,
        ),
    ),
]
