src/snapshots/parse_tests__single_checkbox_with_description.snap
---
source: src/parse_tests.rs
expression: tasks
---
[
    Task {
        checked: false,
        path: [],
        name: [
            Text(
                Borrowed(
                    "this is the title",
                ),
            ),
        ],
        description: [
            Text(
                Borrowed(
                    "and this is the description",
                ),
            ),
        ],
        nested: [],
    },
]
