src/snapshots/parse_tests__single_checkbox_with_title_unchecked.snap
---
source: src/parse_tests.rs
expression: tasks
---
[
    Task {
        checked: false,
        path: [],
        name: [
            Text(
                Borrowed(
                    "this is the title",
                ),
            ),
        ],
        description: [],
        nested: [],
    },
]
