src/snapshots/parse_tests__single_header.snap
---
source: src/parse_tests.rs
expression: headers
---
[
    Header {
        depth: 1,
        text: "a",
    },
]
