src/snapshots/parse_tests__task_under_header.snap
---
source: src/parse_tests.rs
expression: tasks
---
[
    Task {
        checked: false,
        path: [
            "Header Name",
        ],
        name: [
            Text(
                Borrowed(
                    "Task Name",
                ),
            ),
        ],
        description: [],
        nested: [],
    },
]
